# spark

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
assets/: seccomp_probe.c
src/: exec.rs  fetch.rs  init.rs  lib.rs  log.rs  main.rs  proc.rs  sandbox.rs
src/tests/: cas.rs  cgroups.rs  ephemeral.rs  erofs.rs  errors.rs  evict.rs  gc.rs  glibc.rs  idmap.rs  init.rs  landlock.rs  mod.rs  musl.rs  rollback.rs  rootless.rs  seccomp.rs  seccomp_idmap.rs  select.rs  support.rs  userns.rs  verify.rs
src/ui/: logo.rs  menu.rs  mod.rs  render.rs  state.rs
